# membra-core

./: Anchor.toml  README.md  ZK_POPC_MONETARY_POLICY.md  app.py  pyproject.toml
.github/workflows/: ci.yml  solana-devnet.yml
clients/typescript/: package.json
clients/typescript/src/: index.ts  membra_core.ts  membra_core_idl.ts  membra_tokenomics.ts
cpp_llmgpt/: CMakeLists.txt  Makefile  README.md  llmgpt
cpp_llmgpt/include/: gpt.hpp  tensor.hpp  tokenizer.hpp
cpp_llmgpt/scripts/: chat.sh  infer.sh  train.sh  validate.sh
cpp_llmgpt/src/: gpt.cpp  main.cpp
docs/: BENCHMARKS.md  CLOSEDAI.md  DISTRIBUTED_INFERENCE.md  LAN_TEST.md  LIQUIDITY_BOUNDARIES.md  LLMGPT.md  MEMBRA_CHAT_TO_CHAIN_PROTOCOL.md  MOA_BRAIN.md  PROFIT_LOOP.md  PROOF_OF_JOB.md  PROOF_OF_YIELD.md  RIVL.md  SECURITY.md  SOLANA_PROGRAM.md  STATUS.md  STRIPE_SETUP.md  TOKEN_AND_LIQUIDITY_RUNBOOK.md  YIELD_DEFINITIONS.md
examples/: 3_agent_demo.py  distributed_workers.py  lan_two_mac_test.py  mine_files.py  moa_brain_demo.py  personal_chain_demo.py  profit_loop_demo.py  real_stripe_job.py  rivl_demo.py  validate_prompt.py
membra-chat-to-chain/: package-lock.json
membra-l3-cpp/: CMakeLists.txt
membra-l3-cpp/include/: microtask_backing.hpp  zk_seigniorage.hpp
membra-l3-cpp/src/: microtask_backing.cpp  zk_seigniorage.cpp
membra-l3-cpp/tests/: test_microtask_backing.cpp  test_zk_seigniorage.cpp
membra_sdk/: __init__.py  config.py  profit_loop.py  token_gate.py
membra_sdk/brain/: __init__.py  judge.py  moa_orchestrator.py  router.py  synthesizer.py
membra_sdk/brain_server/: __init__.py  server.py
membra_sdk/builder/: __init__.py  artifact_builder.py
membra_sdk/cli/: main.py
membra_sdk/consensus/: poy.py
membra_sdk/consent/: __init__.py  policy.py
membra_sdk/coordinator/: __init__.py  coordinator.py
membra_sdk/core/: artifacts.py  ledger.py  node.py  yield_engine.py
membra_sdk/defi/: operator.py
membra_sdk/job/: __init__.py  artifact_hasher.py  chat_compiler.py  consensus.py  job_spec.py  proof_bundle.py  settlement.py  validators.py  yield_meter.py
membra_sdk/kyi/: __init__.py  notary.py
membra_sdk/llm/: __init__.py  gpt.py  solana_bridge.py  terminal_chat.py  tokenizer.py  validator.py
membra_sdk/marketplace/: __init__.py  escrow.py  jobs.py
membra_sdk/memory/: __init__.py  shared_memory.py
membra_sdk/payments/: __init__.py  receipts.py  settlement.py  stripe_checkout.py  stripe_production.py  webhook_server.py
membra_sdk/personal_chain/: __init__.py  chain.py  events.py
membra_sdk/rivl/: __init__.py  punishment_memory.py  reward_engine.py  rivl_brain.py  verifier_stack.py
membra_sdk/scheduler/: __init__.py  job_queue.py
membra_sdk/worker/: __init__.py  worker_client.py  worker_node.py
omnibus-generation-engine/: README.md  llm_os_factory.py  manifest.json  network_sdk_factory.py
omnibus-generation-engine/examples/: distributed_llm_os_expanded.rs  microkernel_llm_os_expanded.rs  neural_inference_reference.rs  p2p_content_reference.py
programs/membra_core/: Cargo.toml
programs/membra_core/src/: lib.rs  state.rs
programs/membra_tokenomics/: .env.example  Cargo.toml  MAINNET_READINESS.md  PRODUCTION_CHECKLIST.md  QR_GATEWAY_INTEGRATION.md  README.md  SECURITY.md  deploy.sh
programs/membra_tokenomics/src/: collateral_lock.rs  gas_reimbursement.rs  lib.rs  merkle_provenance.rs  microtask_backing.rs  state.rs  zero_balance_preservation.rs  zk_compute.rs  zk_seigniorage.rs
rust_cli/: Cargo.toml
rust_cli/src/: consensus.rs  ledger.rs  lib.rs  main.rs
scripts/: deploy.ts  initialize.ts  test_flow.ts
tests/: membra_core.ts  membra_tokenomics.ts  test_artifacts.py  test_consensus.py
