[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membra-sdk"
version = "0.1.0"
description = "Membra SDK — Proof-of-Yield Consensus Network for M5 Pro"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Membra Network"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "solana>=0.30.0",
    "solders>=0.18.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "psutil>=5.9.8",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
membra = "membra_sdk.cli.main:app"

[project.urls]
Homepage = "https://github.com/membra-network/membra-sdk"
Repository = "https://github.com/membra-network/membra-sdk"
Issues = "https://github.com/membra-network/membra-sdk/issues"
