[package]
name = "membra_core"
version = "0.1.0"
description = "MEMBRA Proof-of-Job Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
