[package]
name = "membra_tokenomics"
version = "0.1.0"
description = "MEMBRA Early-Risk Curve / QR Tokenomics on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "membra_tokenomics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
